# meg-flow

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: bot.yaml  pytest.yaml  test.yaml
dev/: searchindex.js  sg_execution_times.html
dev/_sources/: sg_execution_times.rst.txt
flow/: __init__.py  force.py
flow/commands/: forward_force.py  main.py  oddball.py
flow/oddball/: __init__.py  _config.py  _time.py  _utils.py  oddball.py
flow/oddball/tests/: test_oddball_files.py
flow/oddball/trialList/: main3.txt
flow/utils/: config.py
script/: zmq-control.py
